# DC-lib

./: .gitignore
include/: DC.h
src/: IO.cc  tools.cc  tree_creation.cc
src2/: alt_partitioning.cc  alt_permutations.cc  alt_tree_creation.cc  alt_tree_traversal.cc  topology.cc
src2/headers/: alt_partitioning.h  alt_permutations.h  alt_tree_creation.h  alt_tree_traversal.h
src_clean/: CMakeLists.txt  clean_partitioning.cc  clean_tree_creation.cc
src_clean/headers/: clean_partitioning.h  clean_tree_creation.h
